syntax = "proto3";

option csharp_namespace = "gRPCService.Protos";

service ProductSvc {
	rpc GetProducts (GetProductsRequest) returns (stream GetProductsReply);
	rpc AddProduct (ProductData) returns (ProductReply);
	rpc UpdateProduct (ProductData) returns (ProductReply);
}

message ProductData {
	string id = 1;
	string name = 2;
	double price = 3;
}

message GetProductsRequest {
}

message GetProductsReply {
	ProductData product = 1;
}

message ProductReply {
	bool success = 1;
	string message = 2;
	string inconsistencies = 3;
}
